--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "tutorials passportjs connexion",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "Sammy WebWalterWrite",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^1.3.3",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "nodemon": "^1.18.10",
     "passport": "^0.4.0",
